# $Id: duneproject 5489 2009-03-25 11:19:24Z sander $

SUBDIRS = test

upscalingdir = $(includedir)/dune/upscaling
upscaling_HEADERS = SinglePhaseUpscaler.hpp SinglePhaseUpscaler_impl.hpp \
                    SteadyStateUpscaler.hpp SteadyStateUpscaler_impl.hpp

include $(top_srcdir)/am/global-rules

