# $Id: duneproject 5489 2009-03-25 11:19:24Z sander $

SUBDIRS = test

commondir = $(includedir)/dune/grid/common
common_HEADERS = SparseTable.hpp ErrorMacros.hpp


lib_LTLIBRARIES = libtemporaryhack.la

libtemporaryhack_la_SOURCES = GeometryHelpers.cpp StopWatch.cpp

include $(top_srcdir)/am/global-rules

