SUBDIRS = test

commondir = $(includedir)/dune/solvers/common
common_HEADERS = blas_lapack.hpp BoundaryConditions.hpp fortran.hpp \
                 GridInterfaceEuler.hpp linearInterpolation.hpp Matrix.hpp \
                 NonuniformTableLinear.hpp ReservoirPropertyCapillary.hpp \
                 setupGridAndProps.hpp SimulatorBase.hpp SimulatorTester.hpp \
                 SintefLegacyGridInterface.hpp

include $(top_srcdir)/am/global-rules
