SUBDIRS = test

commondir = $(includedir)/dune/solvers/common
common_HEADERS = blas_lapack.hpp BoundaryConditions.hpp fortran.hpp \
                 GridInterfaceEuler.hpp linearInterpolation.hpp Matrix.hpp \
                 MatrixInverse.hpp NonuniformTableLinear.hpp PeriodicHelpers.hpp \
                 ReservoirPropertyCapillary.hpp setupBoundaryConditions.hpp \
                 setupGridAndProps.hpp SimulatorBase.hpp SimulatorTester.hpp \
		 SimulatorUtilities.hpp SintefLegacyGridInterface.hpp

include $(top_srcdir)/am/global-rules
