polyhedralgriddir = $(includedir)/dune/grid/polyhedralgrid

polyhedralgrid_HEADERS = adaptcallback.hh  backuprestore.hh \
     capabilities.hh  datahandle.hh \
		 declaration.hh  dgfparser.hh  entity.hh \
		 entitypointer.hh  entityseed.hh  geometry.hh \
		 grid.hh  gridview.hh  hostgridaccess.hh  idset.hh \
                 indexset.hh  intersection.hh  intersectioniterator.hh \
		 iterator.hh  persistentcontainer.hh  twistutility.hh

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
